{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 86,
  "lineage": "c5f013a3-bbb4-4a02-b62d-a56a5f3db737",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.251.190.0/23"
            ],
            "guid": "e17dc51d-dfc1-40bc-9615-45e410b7b89a",
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet",
            "location": "westeurope",
            "name": "gch-weu-shared-internet",
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-network",
            "subnets": [
              "gch-snet-weu-shared-zcc-app-02",
              "gch-snet-weu-shared-zcc-app-01",
              "gch-snet-weu-shared-zcc-app-03"
            ],
            "vnet_peerings": {
              "RemoteVnetToHubPeering_8983c89e-840e-44a0-9024-1f534907a94a": "/subscriptions/c1cb683e-044f-46f9-b180-1918eca20ea9/resourceGroups/RG_gch-vhub-weu-shared_74efc9bc-6dd1-4d5f-b53f-7f07f05e12e7/providers/Microsoft.Network/virtualNetworks/HV_gch-vhub-weu-shared_981759c2-df71-435f-842e-151ef59ead86"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/natGateways/gch-nat-weu-prod-zcc-01",
            "idle_timeout_in_minutes": 10,
            "location": "westeurope",
            "name": "gch-nat-weu-prod-zcc-01",
            "public_ip_address_ids": [
              "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/publicIPAddresses/gch-pip-weu-prod-zcc-01"
            ],
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "resource_guid": "fb7c68cc-3d52-4b38-8152-77cfe80efa32",
            "sku_name": "Standard",
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Department": "shared",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "SDOCode": "8561",
              "Stack": "Prod",
              "supportcost": "$"
            },
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/natGateways/gch-nat-weu-prod-zcc-02",
            "idle_timeout_in_minutes": 10,
            "location": "westeurope",
            "name": "gch-nat-weu-prod-zcc-02",
            "public_ip_address_ids": [
              "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/publicIPAddresses/gch-pip-weu-prod-zcc-02"
            ],
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "resource_guid": "32fc8a2f-91ae-4132-8939-1686fd0590b5",
            "sku_name": "Standard",
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Department": "shared",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "SDOCode": "8561",
              "Stack": "Prod",
              "supportcost": "$"
            },
            "zones": [
              "2"
            ]
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/natGateways/gch-nat-weu-prod-zcc-03",
            "idle_timeout_in_minutes": 10,
            "location": "westeurope",
            "name": "gch-nat-weu-prod-zcc-03",
            "public_ip_address_ids": [
              "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/publicIPAddresses/gch-pip-weu-prod-zcc-03"
            ],
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "resource_guid": "8cd1e84e-c477-4393-9ff4-5aa149e43d26",
            "sku_name": "Standard",
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Department": "shared",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "SDOCode": "8561",
              "Stack": "Prod",
              "supportcost": "$"
            },
            "zones": [
              "3"
            ]
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "nat-gw-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/natGateways/gch-nat-weu-prod-zcc-01|/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/publicIPAddresses/gch-pip-weu-prod-zcc-01",
            "nat_gateway_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/natGateways/gch-nat-weu-prod-zcc-01",
            "public_ip_address_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/publicIPAddresses/gch-pip-weu-prod-zcc-01"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_public_ip.nat-pip",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/natGateways/gch-nat-weu-prod-zcc-02|/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/publicIPAddresses/gch-pip-weu-prod-zcc-02",
            "nat_gateway_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/natGateways/gch-nat-weu-prod-zcc-02",
            "public_ip_address_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/publicIPAddresses/gch-pip-weu-prod-zcc-02"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_public_ip.nat-pip",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/natGateways/gch-nat-weu-prod-zcc-03|/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/publicIPAddresses/gch-pip-weu-prod-zcc-03",
            "nat_gateway_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/natGateways/gch-nat-weu-prod-zcc-03",
            "public_ip_address_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/publicIPAddresses/gch-pip-weu-prod-zcc-03"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_public_ip.nat-pip",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/publicIPAddresses/gch-pip-weu-prod-zcc-01",
            "idle_timeout_in_minutes": 30,
            "ip_address": "74.234.155.7",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "gch-pip-weu-prod-zcc-01",
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "sku": "Standard",
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Department": "shared",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "SDOCode": "8561",
              "Stack": "Prod",
              "supportcost": "$"
            },
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/publicIPAddresses/gch-pip-weu-prod-zcc-02",
            "idle_timeout_in_minutes": 30,
            "ip_address": "108.143.219.3",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "gch-pip-weu-prod-zcc-02",
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "sku": "Standard",
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Department": "shared",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "SDOCode": "8561",
              "Stack": "Prod",
              "supportcost": "$"
            },
            "zones": [
              "2"
            ]
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/publicIPAddresses/gch-pip-weu-prod-zcc-03",
            "idle_timeout_in_minutes": 30,
            "ip_address": "4.231.88.203",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "gch-pip-weu-prod-zcc-03",
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "sku": "Standard",
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Department": "shared",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "SDOCode": "8561",
              "Stack": "Prod",
              "supportcost": "$"
            },
            "zones": [
              "3"
            ]
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "cc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.251.190.0/26",
            "address_prefixes": [
              "10.251.190.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet/subnets/gch-snet-weu-shared-zcc-app-01",
            "name": "gch-snet-weu-shared-zcc-app-01",
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-network",
            "virtual_network_name": "gch-weu-shared-internet"
          },
          "dependencies": [
            "data.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.251.190.64/26",
            "address_prefixes": [
              "10.251.190.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet/subnets/gch-snet-weu-shared-zcc-app-02",
            "name": "gch-snet-weu-shared-zcc-app-02",
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-network",
            "virtual_network_name": "gch-weu-shared-internet"
          },
          "dependencies": [
            "data.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.251.190.128/26",
            "address_prefixes": [
              "10.251.190.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet/subnets/gch-snet-weu-shared-zcc-app-03",
            "name": "gch-snet-weu-shared-zcc-app-03",
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-network",
            "virtual_network_name": "gch-weu-shared-internet"
          },
          "dependencies": [
            "data.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "subnet-nat-association-ec",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet/subnets/gch-snet-weu-shared-zcc-app-01",
            "nat_gateway_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/natGateways/gch-nat-weu-prod-zcc-01",
            "subnet_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet/subnets/gch-snet-weu-shared-zcc-app-01"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet/subnets/gch-snet-weu-shared-zcc-app-02",
            "nat_gateway_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/natGateways/gch-nat-weu-prod-zcc-02",
            "subnet_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet/subnets/gch-snet-weu-shared-zcc-app-02"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet/subnets/gch-snet-weu-shared-zcc-app-03",
            "nat_gateway_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/natGateways/gch-nat-weu-prod-zcc-03",
            "subnet_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet/subnets/gch-snet-weu-shared-zcc-app-03"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.cc-lb",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "cc-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01/frontendIPConfigurations/gch-lb-weu-prod-zcc-01-ipconfig",
                "load_balancer_rules": [
                  "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01/loadBalancingRules/gch-lb-weu-prod-zcc-01-rule"
                ],
                "name": "gch-lb-weu-prod-zcc-01-ipconfig",
                "private_ip_address": "10.251.190.6",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet/subnets/gch-snet-weu-shared-zcc-app-01"
              }
            ],
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01",
            "location": "westeurope",
            "name": "gch-lb-weu-prod-zcc-01",
            "private_ip_address": "10.251.190.6",
            "private_ip_addresses": [
              "10.251.190.6"
            ],
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "sku": "Standard",
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Department": "shared",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "SDOCode": "8561",
              "Stack": "Prod",
              "supportcost": "$"
            }
          },
          "dependencies": [
            "azurerm_subnet.cc-subnet",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.cc-lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "cc-lb-backend-pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC01-service-nic/ipConfigurations/GCHPLWEUAZZCC01-service-nic-config",
              "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC02-service-nic/ipConfigurations/GCHPLWEUAZZCC02-service-nic-config",
              "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC03-service-nic/ipConfigurations/GCHPLWEUAZZCC03-service-nic-config"
            ],
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01/backendAddressPools/gch-lb-weu-prod-zcc-01-backend",
            "load_balancing_rules": [
              "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01/loadBalancingRules/gch-lb-weu-prod-zcc-01-rule"
            ],
            "loadbalancer_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01",
            "name": "gch-lb-weu-prod-zcc-01-backend",
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01"
          },
          "dependencies": [
            "azurerm_subnet.cc-subnet",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "module.cc-lb.azurerm_lb.cc-lb"
          ]
        }
      ]
    },
    {
      "module": "module.cc-lb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "cc-lb-probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01/probes/gch-lb-weu-prod-zcc-01-health",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01/loadBalancingRules/gch-lb-weu-prod-zcc-01-rule"
            ],
            "loadbalancer_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01",
            "name": "gch-lb-weu-prod-zcc-01-health",
            "number_of_probes": 2,
            "port": 50000,
            "protocol": "Http",
            "request_path": "/?cchealth",
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01"
          },
          "dependencies": [
            "azurerm_subnet.cc-subnet",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "module.cc-lb.azurerm_lb.cc-lb"
          ]
        }
      ]
    },
    {
      "module": "module.cc-lb",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "cc-lb-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01/backendAddressPools/gch-lb-weu-prod-zcc-01-backend",
            "backend_port": 0,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01/frontendIPConfigurations/gch-lb-weu-prod-zcc-01-ipconfig",
            "frontend_ip_configuration_name": "gch-lb-weu-prod-zcc-01-ipconfig",
            "frontend_port": 0,
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01/loadBalancingRules/gch-lb-weu-prod-zcc-01-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "SourceIP",
            "loadbalancer_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01",
            "name": "gch-lb-weu-prod-zcc-01-rule",
            "probe_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01/probes/gch-lb-weu-prod-zcc-01-health",
            "protocol": "All",
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01"
          },
          "dependencies": [
            "azurerm_subnet.cc-subnet",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "module.cc-lb.azurerm_lb.cc-lb",
            "module.cc-lb.azurerm_lb_backend_address_pool.cc-lb-backend-pool",
            "module.cc-lb.azurerm_lb_probe.cc-lb-probe"
          ]
        }
      ]
    },
    {
      "module": "module.cc-vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "cc-mgmt-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC01-mgmt-nic",
            "internal_domain_name_suffix": "dxcx1yob144ebfqvixsbbn3ytc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "GCHPLWEUAZZCC01-mgmt-nic-config",
                "primary": true,
                "private_ip_address": "10.251.190.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet/subnets/gch-snet-weu-shared-zcc-app-01"
              }
            ],
            "location": "westeurope",
            "name": "GCHPLWEUAZZCC01-mgmt-nic",
            "private_ip_address": "10.251.190.4",
            "private_ip_addresses": [
              "10.251.190.4"
            ],
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "Backup": "No",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Custom-AMI": "TRUE",
              "Department": "shared",
              "DeploymentType": "NN",
              "Exception": "Yes",
              "InstanceSchedule": "24*7",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "PatchGroup": "4th Sat 10:00 AM IST",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "RI": "TBD",
              "Role": "Zscaler Cloud Connector",
              "SDOCode": "8561",
              "ServiceType": "IAAS",
              "Stack": "Prod",
              "os-support": "GenpactProxySupport@genpact.com",
              "schedulefordeletion": "No",
              "supportcost": "$"
            }
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC02-mgmt-nic",
            "internal_domain_name_suffix": "dxcx1yob144ebfqvixsbbn3ytc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "GCHPLWEUAZZCC02-mgmt-nic-config",
                "primary": true,
                "private_ip_address": "10.251.190.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet/subnets/gch-snet-weu-shared-zcc-app-02"
              }
            ],
            "location": "westeurope",
            "name": "GCHPLWEUAZZCC02-mgmt-nic",
            "private_ip_address": "10.251.190.68",
            "private_ip_addresses": [
              "10.251.190.68"
            ],
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "Backup": "No",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Custom-AMI": "TRUE",
              "Department": "shared",
              "DeploymentType": "NN",
              "Exception": "Yes",
              "InstanceSchedule": "24*7",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "PatchGroup": "4th Sat 10:00 AM IST",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "RI": "TBD",
              "Role": "Zscaler Cloud Connector",
              "SDOCode": "8561",
              "ServiceType": "IAAS",
              "Stack": "Prod",
              "os-support": "GenpactProxySupport@genpact.com",
              "schedulefordeletion": "No",
              "supportcost": "$"
            }
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC03-mgmt-nic",
            "internal_domain_name_suffix": "dxcx1yob144ebfqvixsbbn3ytc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "GCHPLWEUAZZCC03-mgmt-nic-config",
                "primary": true,
                "private_ip_address": "10.251.190.132",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet/subnets/gch-snet-weu-shared-zcc-app-03"
              }
            ],
            "location": "westeurope",
            "name": "GCHPLWEUAZZCC03-mgmt-nic",
            "private_ip_address": "10.251.190.132",
            "private_ip_addresses": [
              "10.251.190.132"
            ],
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "Backup": "No",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Custom-AMI": "TRUE",
              "Department": "shared",
              "DeploymentType": "NN",
              "Exception": "Yes",
              "InstanceSchedule": "24*7",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "PatchGroup": "4th Sat 10:00 AM IST",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "RI": "TBD",
              "Role": "Zscaler Cloud Connector",
              "SDOCode": "8561",
              "ServiceType": "IAAS",
              "Stack": "Prod",
              "os-support": "GenpactProxySupport@genpact.com",
              "schedulefordeletion": "No",
              "supportcost": "$"
            }
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file"
          ]
        }
      ]
    },
    {
      "module": "module.cc-vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "cc-service-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC01-service-nic",
            "internal_domain_name_suffix": "dxcx1yob144ebfqvixsbbn3ytc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "GCHPLWEUAZZCC01-service-nic-config",
                "primary": true,
                "private_ip_address": "10.251.190.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet/subnets/gch-snet-weu-shared-zcc-app-01"
              }
            ],
            "location": "westeurope",
            "name": "GCHPLWEUAZZCC01-service-nic",
            "private_ip_address": "10.251.190.5",
            "private_ip_addresses": [
              "10.251.190.5"
            ],
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "Backup": "No",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Custom-AMI": "TRUE",
              "Department": "shared",
              "DeploymentType": "NN",
              "Exception": "Yes",
              "InstanceSchedule": "24*7",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "PatchGroup": "4th Sat 10:00 AM IST",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "RI": "TBD",
              "Role": "Zscaler Cloud Connector",
              "SDOCode": "8561",
              "ServiceType": "IAAS",
              "Stack": "Prod",
              "os-support": "GenpactProxySupport@genpact.com",
              "schedulefordeletion": "No",
              "supportcost": "$"
            }
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file",
            "module.cc-vm.azurerm_network_interface.cc-mgmt-nic"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC02-service-nic",
            "internal_domain_name_suffix": "dxcx1yob144ebfqvixsbbn3ytc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "GCHPLWEUAZZCC02-service-nic-config",
                "primary": true,
                "private_ip_address": "10.251.190.69",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet/subnets/gch-snet-weu-shared-zcc-app-02"
              }
            ],
            "location": "westeurope",
            "name": "GCHPLWEUAZZCC02-service-nic",
            "private_ip_address": "10.251.190.69",
            "private_ip_addresses": [
              "10.251.190.69"
            ],
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "Backup": "No",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Custom-AMI": "TRUE",
              "Department": "shared",
              "DeploymentType": "NN",
              "Exception": "Yes",
              "InstanceSchedule": "24*7",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "PatchGroup": "4th Sat 10:00 AM IST",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "RI": "TBD",
              "Role": "Zscaler Cloud Connector",
              "SDOCode": "8561",
              "ServiceType": "IAAS",
              "Stack": "Prod",
              "os-support": "GenpactProxySupport@genpact.com",
              "schedulefordeletion": "No",
              "supportcost": "$"
            }
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file",
            "module.cc-vm.azurerm_network_interface.cc-mgmt-nic"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC03-service-nic",
            "internal_domain_name_suffix": "dxcx1yob144ebfqvixsbbn3ytc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "GCHPLWEUAZZCC03-service-nic-config",
                "primary": true,
                "private_ip_address": "10.251.190.133",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-network/providers/Microsoft.Network/virtualNetworks/gch-weu-shared-internet/subnets/gch-snet-weu-shared-zcc-app-03"
              }
            ],
            "location": "westeurope",
            "name": "GCHPLWEUAZZCC03-service-nic",
            "private_ip_address": "10.251.190.133",
            "private_ip_addresses": [
              "10.251.190.133"
            ],
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "Backup": "No",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Custom-AMI": "TRUE",
              "Department": "shared",
              "DeploymentType": "NN",
              "Exception": "Yes",
              "InstanceSchedule": "24*7",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "PatchGroup": "4th Sat 10:00 AM IST",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "RI": "TBD",
              "Role": "Zscaler Cloud Connector",
              "SDOCode": "8561",
              "ServiceType": "IAAS",
              "Stack": "Prod",
              "os-support": "GenpactProxySupport@genpact.com",
              "schedulefordeletion": "No",
              "supportcost": "$"
            }
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file",
            "module.cc-vm.azurerm_network_interface.cc-mgmt-nic"
          ]
        }
      ]
    },
    {
      "module": "module.cc-vm",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "cc-vm-service-nic-lb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01/backendAddressPools/gch-lb-weu-prod-zcc-01-backend",
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC01-service-nic/ipConfigurations/GCHPLWEUAZZCC01-service-nic-config|/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01/backendAddressPools/gch-lb-weu-prod-zcc-01-backend",
            "ip_configuration_name": "GCHPLWEUAZZCC01-service-nic-config",
            "network_interface_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC01-service-nic"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file",
            "module.cc-lb.azurerm_lb.cc-lb",
            "module.cc-lb.azurerm_lb_backend_address_pool.cc-lb-backend-pool",
            "module.cc-vm.azurerm_network_interface.cc-mgmt-nic",
            "module.cc-vm.azurerm_network_interface.cc-service-nic"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01/backendAddressPools/gch-lb-weu-prod-zcc-01-backend",
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC02-service-nic/ipConfigurations/GCHPLWEUAZZCC02-service-nic-config|/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01/backendAddressPools/gch-lb-weu-prod-zcc-01-backend",
            "ip_configuration_name": "GCHPLWEUAZZCC02-service-nic-config",
            "network_interface_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC02-service-nic"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file",
            "module.cc-lb.azurerm_lb.cc-lb",
            "module.cc-lb.azurerm_lb_backend_address_pool.cc-lb-backend-pool",
            "module.cc-vm.azurerm_network_interface.cc-mgmt-nic",
            "module.cc-vm.azurerm_network_interface.cc-service-nic"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01/backendAddressPools/gch-lb-weu-prod-zcc-01-backend",
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC03-service-nic/ipConfigurations/GCHPLWEUAZZCC03-service-nic-config|/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/loadBalancers/gch-lb-weu-prod-zcc-01/backendAddressPools/gch-lb-weu-prod-zcc-01-backend",
            "ip_configuration_name": "GCHPLWEUAZZCC03-service-nic-config",
            "network_interface_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC03-service-nic"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file",
            "module.cc-lb.azurerm_lb.cc-lb",
            "module.cc-lb.azurerm_lb_backend_address_pool.cc-lb-backend-pool",
            "module.cc-vm.azurerm_network_interface.cc-mgmt-nic",
            "module.cc-vm.azurerm_network_interface.cc-service-nic"
          ]
        }
      ]
    },
    {
      "module": "module.cc-vm",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "ec-mgmt-nic-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC01-mgmt-nic|/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC01-mgmt-nsg",
            "network_interface_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC01-mgmt-nic",
            "network_security_group_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC01-mgmt-nsg"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file",
            "module.cc-vm.azurerm_network_interface.cc-mgmt-nic",
            "module.cc-vm.azurerm_network_security_group.cc-mgmt-nsg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC02-mgmt-nic|/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC02-mgmt-nsg",
            "network_interface_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC02-mgmt-nic",
            "network_security_group_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC02-mgmt-nsg"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file",
            "module.cc-vm.azurerm_network_interface.cc-mgmt-nic",
            "module.cc-vm.azurerm_network_security_group.cc-mgmt-nsg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC03-mgmt-nic|/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC03-mgmt-nsg",
            "network_interface_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC03-mgmt-nic",
            "network_security_group_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC03-mgmt-nsg"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file",
            "module.cc-vm.azurerm_network_interface.cc-mgmt-nic",
            "module.cc-vm.azurerm_network_security_group.cc-mgmt-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.cc-vm",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "ec-service-nic-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC01-service-nic|/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC01-service-nsg",
            "network_interface_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC01-service-nic",
            "network_security_group_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC01-service-nsg"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file",
            "module.cc-vm.azurerm_network_interface.cc-mgmt-nic",
            "module.cc-vm.azurerm_network_interface.cc-service-nic",
            "module.cc-vm.azurerm_network_security_group.cc-service-nsg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC02-service-nic|/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC02-service-nsg",
            "network_interface_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC02-service-nic",
            "network_security_group_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC02-service-nsg"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file",
            "module.cc-vm.azurerm_network_interface.cc-mgmt-nic",
            "module.cc-vm.azurerm_network_interface.cc-service-nic",
            "module.cc-vm.azurerm_network_security_group.cc-service-nsg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC03-service-nic|/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC03-service-nsg",
            "network_interface_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkInterfaces/GCHPLWEUAZZCC03-service-nic",
            "network_security_group_id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC03-service-nsg"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file",
            "module.cc-vm.azurerm_network_interface.cc-mgmt-nic",
            "module.cc-vm.azurerm_network_interface.cc-service-nic",
            "module.cc-vm.azurerm_network_security_group.cc-service-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.cc-vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "cc-mgmt-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC01-mgmt-nsg",
            "location": "westeurope",
            "name": "GCHPLWEUAZZCC01-mgmt-nsg",
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ICMP_VNET",
                "priority": 4001,
                "protocol": "Icmp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "OUTBOUND",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH_VNET",
                "priority": 4000,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "Backup": "No",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Custom-AMI": "TRUE",
              "Department": "shared",
              "DeploymentType": "NN",
              "Exception": "Yes",
              "InstanceSchedule": "24*7",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "PatchGroup": "4th Sat 10:00 AM IST",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "RI": "TBD",
              "Role": "Zscaler Cloud Connector",
              "SDOCode": "8561",
              "ServiceType": "IAAS",
              "Stack": "Prod",
              "os-support": "GenpactProxySupport@genpact.com",
              "schedulefordeletion": "No",
              "supportcost": "$"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC02-mgmt-nsg",
            "location": "westeurope",
            "name": "GCHPLWEUAZZCC02-mgmt-nsg",
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ICMP_VNET",
                "priority": 4001,
                "protocol": "Icmp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "OUTBOUND",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH_VNET",
                "priority": 4000,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "Backup": "No",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Custom-AMI": "TRUE",
              "Department": "shared",
              "DeploymentType": "NN",
              "Exception": "Yes",
              "InstanceSchedule": "24*7",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "PatchGroup": "4th Sat 10:00 AM IST",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "RI": "TBD",
              "Role": "Zscaler Cloud Connector",
              "SDOCode": "8561",
              "ServiceType": "IAAS",
              "Stack": "Prod",
              "os-support": "GenpactProxySupport@genpact.com",
              "schedulefordeletion": "No",
              "supportcost": "$"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC03-mgmt-nsg",
            "location": "westeurope",
            "name": "GCHPLWEUAZZCC03-mgmt-nsg",
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ICMP_VNET",
                "priority": 4001,
                "protocol": "Icmp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "OUTBOUND",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH_VNET",
                "priority": 4000,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "Backup": "No",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Custom-AMI": "TRUE",
              "Department": "shared",
              "DeploymentType": "NN",
              "Exception": "Yes",
              "InstanceSchedule": "24*7",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "PatchGroup": "4th Sat 10:00 AM IST",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "RI": "TBD",
              "Role": "Zscaler Cloud Connector",
              "SDOCode": "8561",
              "ServiceType": "IAAS",
              "Stack": "Prod",
              "os-support": "GenpactProxySupport@genpact.com",
              "schedulefordeletion": "No",
              "supportcost": "$"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file"
          ]
        }
      ]
    },
    {
      "module": "module.cc-vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "cc-service-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC01-service-nsg",
            "location": "westeurope",
            "name": "GCHPLWEUAZZCC01-service-nsg",
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ALL_VNET",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "OUTBOUND",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "Backup": "No",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Custom-AMI": "TRUE",
              "Department": "shared",
              "DeploymentType": "NN",
              "Exception": "Yes",
              "InstanceSchedule": "24*7",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "PatchGroup": "4th Sat 10:00 AM IST",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "RI": "TBD",
              "Role": "Zscaler Cloud Connector",
              "SDOCode": "8561",
              "ServiceType": "IAAS",
              "Stack": "Prod",
              "os-support": "GenpactProxySupport@genpact.com",
              "schedulefordeletion": "No",
              "supportcost": "$"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC02-service-nsg",
            "location": "westeurope",
            "name": "GCHPLWEUAZZCC02-service-nsg",
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ALL_VNET",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "OUTBOUND",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "Backup": "No",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Custom-AMI": "TRUE",
              "Department": "shared",
              "DeploymentType": "NN",
              "Exception": "Yes",
              "InstanceSchedule": "24*7",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "PatchGroup": "4th Sat 10:00 AM IST",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "RI": "TBD",
              "Role": "Zscaler Cloud Connector",
              "SDOCode": "8561",
              "ServiceType": "IAAS",
              "Stack": "Prod",
              "os-support": "GenpactProxySupport@genpact.com",
              "schedulefordeletion": "No",
              "supportcost": "$"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72452951-68dc-409e-9588-6f0a85306411/resourceGroups/gch-rg-weu-prod-shared-connectivity-zcc-01/providers/Microsoft.Network/networkSecurityGroups/GCHPLWEUAZZCC03-service-nsg",
            "location": "westeurope",
            "name": "GCHPLWEUAZZCC03-service-nsg",
            "resource_group_name": "gch-rg-weu-prod-shared-connectivity-zcc-01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ALL_VNET",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "OUTBOUND",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "ApplicationSupport": "GenpactProxySupport@genpact.com",
              "Backup": "No",
              "BusinessVertical": "CorpIT",
              "CCCode": "180",
              "Custom-AMI": "TRUE",
              "Department": "shared",
              "DeploymentType": "NN",
              "Exception": "Yes",
              "InstanceSchedule": "24*7",
              "Owner": "keshav.rajput@genpact.com",
              "OwnerSupervisor": "gaurav.demiwal@genpact.com",
              "PID": "shared",
              "PatchGroup": "4th Sat 10:00 AM IST",
              "ProjectName": "GCH Europe Azure Landing Zone",
              "ProvisionedBy": "Terraform",
              "ProvisioningSR": "CHG0079549",
              "RI": "TBD",
              "Role": "Zscaler Cloud Connector",
              "SDOCode": "8561",
              "ServiceType": "IAAS",
              "Stack": "Prod",
              "os-support": "GenpactProxySupport@genpact.com",
              "schedulefordeletion": "No",
              "supportcost": "$"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_nat_gateway.nat-gw",
            "azurerm_subnet.cc-subnet",
            "azurerm_subnet_nat_gateway_association.subnet-nat-association-ec",
            "data.azurerm_resource_group.main",
            "data.azurerm_virtual_network.vnet",
            "local_file.user-data-file"
          ]
        }
      ]
    }
  ]
}